tests/ui/ferrocene/compiler-arguments/upper_c_prefer-dynamic/upper_c_prefer-dynamic_space-eq-invalid.rs
//@ check-fail
//@ compile-flags: -C prefer-dynamic=invalid
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_prefer_dynamic
